--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.2.0",
+    "@elysiajs/jwt": "^1.2.0",
+    "@elysiajs/swagger": "^1.2.2",
+    "@prisma/client": "^6.6.0",
+    "@types/bcrypt": "^5.0.2",
+    "elysia": "latest",
+    "prisma": "^6.6.0"
   },
   "devDependencies": {
     "bun-types": "latest"
